<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whitepro"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/codeall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/coda"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="700dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/codeall">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/comp"
            android:src="@drawable/kisspng_programmer_computer_programming_laptop_professiona_architectural_engineer_vector_material_5ad9edb20c2c80_1" />

        <TextView
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/coda"
            android:gravity="center"
            android:text="@string/code_learning"
            android:textColor="@color/black"
            android:textSize="48sp" />

        <TextView
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="@string/upgrade"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="130dp"
            android:contentDescription="@string/page"
            android:src="@drawable/dots" />
    </LinearLayout>

    <ImageView
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/next"
        android:src="@drawable/arrow_right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>