<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whitepro"
    tools:context=".MainActivity3PageCode">

    <TextView
        android:id="@+id/codeall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/coda"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="700dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/codeall">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/comp"
            android:src="@drawable/page3" />

        <TextView
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/coda"
            android:gravity="center"
            android:text="@string/choose"
            android:textColor="@color/black"
            android:textSize="48sp" />

        <TextView
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="@string/thousand"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="130dp"
            android:contentDescription="@string/page"
            android:src="@drawable/dots3" />
    </LinearLayout>

    <TextView
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button2"
        android:fontFamily="@font/coda"
        android:gravity="center"
        android:text="Login"
        android:textColor="@color/green"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button"
        android:fontFamily="@font/coda"
        android:gravity="center"
        android:text="Register"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>